# music-generator

./: .coveragerc  README.md  pyproject.toml  tasks.py
documentation/: implementation.md  projectspecification.md  testing.md  userguide.md
documentation/weeklyreports/: weeklyreport1.md  weeklyreport2.md  weeklyreport3.md  weeklyreport4.md  weeklyreport5.md  weeklyreport6.md
src/: ansicodes.py  ansicolors.py  app.py  index.py  ui.py
src/midi/: TwinkleTwinkleLittleStar.mid  midi.py  midi_player.py
src/models/: markov_chain.py  trie.py
src/tests/: markov_chain_test.py  midi_test.py  trie_test.py
src/ui/: ui.py
