[tool.poetry]
name = "music-generator"
version = "0.1.0"
description = ""
authors = ["sannilatvala <119106675+sannilatvala@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "music_generator"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
