[tool.poetry]
name = "music-generator"
version = "0.1.0"
description = ""
authors = ["sannilatvala <119106675+sannilatvala@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.2"
music21 = "^9.1.0"
mido = "^1.3.2"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.1.1"
coverage = "^7.4.4"
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
